--- a/solana-challenge-3-phantom/src/App.css
+++ b/solana-challenge-3-phantom/src/App.css
@@ -1,3 +1,7 @@
+p {
+  margin: 0;
+}
+
 body {
   background-color: #282c34;
   font-size: calc(10px + 2vmin);
@@ -14,6 +18,7 @@ body {
   justify-content: space-around;
   margin-left: auto;
   width: 40vw;
+  margin-top: 20px;
 }
 
 .wrap-content {
